# mch-schedule-reflow

./: Cargo.toml  README.md  reflowable schedule idea.md  schedule.epub  schedule.html
src/: lib.rs  main.rs  parse.rs  render.rs  schedule.rs
static/: colophon.md
test/: mch-sched.json
