[package]
name = "mch-schedule-reflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
curl = "0.4.43"
handlebars = "4.3.1"
json = "0.12.4"
serde = { version = "1.0.138", features = ["derive"] }
serde_with = { version = "1.14.0", features = ["chrono"] }
tempfile = "3.3.0"
